--- a/app/src/main/res/layout/activity_add_store.xml
+++ b/app/src/main/res/layout/activity_add_store.xml
@@ -4,25 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainMenuActivity">
+    tools:context=".AddStoreActivity">
 
-    <ListView
-        android:id="@+id/storeListDisplay"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        ></ListView>
-
-
-    <Button
-        android:id="@+id/addStore"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Add Store"
+        android:text="You are in add store page"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
