--- a/app/src/main/res/layout/store_list.xml
+++ b/app/src/main/res/layout/store_list.xml
@@ -4,25 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainMenuActivity">
+    tools:context=".ItemListActivity">
 
-    <ListView
-        android:id="@+id/storeListDisplay"
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Store list"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        ></ListView>
+        app:layout_constraintTop_toTopOf="parent"></TextView>
 
-
-    <Button
-        android:id="@+id/addStore"
+    <ListView
+        android:id="@+id/sample"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Add Store"
-        app:layout_constraintBottom_toBottomOf="parent"
+
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView"></ListView>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
